src/objects/Communication_Hub_OrderLine__c.object
<CustomObject>
    <fields>
        <fullName>Comm_Hub_Variant__c</fullName>
        <description>Communication Hub Variant</description>
        <inlineHelpText>Communication Hub Variant</inlineHelpText>
        <label>Comm Hub Variant</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Communication_Hub_Order__c</fullName>
        <label>Communication Hub Order</label>
        <referenceTo>Communication_Hub_Order__c</referenceTo>
        <relationshipLabel>Communication Hub OrderLines</relationshipLabel>
        <relationshipName>Communication_Hub_OrderLines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Communication Hub OrderLine</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CHOL-{0000}</displayFormat>
        <label>Comm_Hub_OrdLine</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Hub OrderLines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>